# hanbit-aiagent

./: .gitignore  README.md  pyproject.toml  requirements.txt
CHAP10_A2A/hello_world/: README.md  agent_executor.py  agent_server.py  test_client.py
CHAP10_A2A/multi_agent/: README.md  agent_orchestrator.py
CHAP11_final-project/: .env.example  README.md  test_client.py
CHAP11_final-project/common/: __init__.py  a2a_client.py  config.py  schemas.py
CHAP11_final-project/file_management_agent/: __init__.py  agent.py  agent_executor.py  agent_server.py  gdrive_client.py
CHAP11_final-project/internal_rag_agent/: __init__.py  agent.py  agent_executor.py  agent_server.py  index.sql  test_index.py
CHAP11_final-project/orchestrator_agent/: __init__.py  agent.py  agent_executor.py  agent_server.py
CHAP11_final-project/web_research_agent/: __init__.py  agent.py  agent_executor.py  agent_server.py
CHAP6_single-agent/: .env.example  fibonacci.py  langgraph.json
CHAP6_single-agent/coding_agent/: agent.py  custom_tools.ipynb  fibonacci.py  tools.py
CHAP6_single-agent/create_agent/: middleware.py  middleware_with_node.py  tools.py
CHAP6_single-agent/rag_agent/: agent.py  edges.py  nodes.py  retriever.py  vector_retriever.ipynb
CHAP6_single-agent/web_agent/: agent.py  tavilysearch_tool.ipynb
CHAP7_multi-agent/: .env.example  ai_agents_trend_2025.html  global_ev_sales_report.html  how_to_use_command.ipynb  langgraph.json
CHAP8_memory/: long-term memory.ipynb  short-term memory.ipynb
PART2/: 4.4_main.py  5.2_랭그래프 기본 개념 이해하기.ipynb  5.3_랭그래프로 에이전트 설계하고 구현하기.ipynb
(+41 files in other folders)
